--- a/kontakt.html
+++ b/kontakt.html
@@ -15,19 +15,9 @@
   </head>
   <body>
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-      <a href="#" class="navbar-brand">
-        <img src="https://www.skilehrerjobs.at/img137/school-header-51.jpg" alt="">
+      <a href="index.html" class="navbar-brand">
+        <img src="Logo-Skischule.png" alt="">
       </a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a href="#" class="nav-link">DE</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">EN</a>
-          </li>
-        </ul>
-      </div>
     </div>
     <div class="nav-bar">
       <a href="./index.html" class="nav-elements">Home</a>
@@ -38,78 +28,68 @@
       <a href="./news.html" class="nav-elements">News</a>
       <a href="./uu.html" class="nav-elements">Über Uns</a>
     </div>
-    <hr>
-    <hr>
-    <!-- <div xclass="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.kitzbuehel.com/app/uploads/2020/02/0ec4cc2c-9159-482b-ac6f-1b629015f88a-930x620.jpg);"> -->
-        <div class="container">
-            <div class="card">
-              <h3>Kontakt</h3>
-              <div>
-                <p>Tiroler Skischule Jochberg Wagstätt</p>
-                <p>Sonnfeldweg 15/2, 6373 Jochberg</p>
-                <p>Mobil: +43 (0) 664 / 35 83 389 oder +43 (0) 676 / 842 900 860</p>
-                <p>E-mail: info@tsjw.at</p>
-                <p>www.tsjw.at</p>
-              </div>
-              <h3>Öffnungszeiten</h3>
-              <div style="display: flex; align-items: stretch;">
+        <div class="containerq">
+          <div class="card blind">hi</div>
+            <div class="container">
+                <h3>Kontakt</h3>
                 <div>
-                  <p>Montag bis Freitag:</p>
-                  <p>Samstag, Sonntag, Ferien:</p>
+                  <p>Tiroler Skischule Jochberg Wagstätt<br>Sonnfeldweg 15/2, 6373 Jochberg<br>Mobil: +43 (0) 664 / 35 83 389 oder<br>+43 (0) 676 / 842 900 860<br>E-mail: info@tsjw.at</p>
                 </div>
-                <div style="opacity: 0;">somthing</div>
-                <div>
-                  <p>08:30 – 12:00 Uhr und 13:00 – 17:30 Uhr</p>
-                  <p>08:30 – 12:30 Uhr und 13:00 – 18:00 Uhr</p>
+                <h3>Öffnungszeiten</h3>
+                <div style="display: flex; align-items: stretch;">
+                  <div>
+                    <p>20.11.2021 – 24.04.2022</p>
+                    <p>Montag bis Freitag:</p>
+                    <p>Samstag, Sonntag, Ferien:</p>
+                  </div>
+                  <div style="opacity: 0;">somthing</div>
+                  <div>
+                    <p style="opacity: 0;">somwthing</p>
+                    <p>08:30 – 12:00 Uhr und 13:00 – 17:30 Uhr</p>
+                    <p>08:30 – 12:30 Uhr und 13:00 – 18:00 Uhr</p>
+                  </div>
                 </div>
-              </div>
-              <h3>Treffpunkt</h3>
-              <p>Sammelplatz Wagstätt Gondel Talstation bzw. nach Vereinbarung.</p>
+                <h3>Treffpunkt</h3>
+                <p>Sammelplatz Wagstätt Gondel Talstation bzw. nach Vereinbarung.</p>
             </div>
-          </div>
-          <div class="container">
-            <a href="https://www.google.com/maps/place/Tiroler+Skischule+Jochberg+Wagst%C3%A4tt/@47.3768285,12.4163072,4184m/data=!3m1!1e3!4m5!3m4!1s0x4777ad109712de0b:0xd56101cf40a39452!8m2!3d47.3787102!4d12.4194771!5m1!1e4">
-              <div class="card team mb-5" style="background-image: url(./mapplaceholder.png); height: 40vh;">
-              </div>
-            </a>
-          </div>
-          <div class="container">
-            <div class="card disclaimer">
-              <h3>Corona</h3>
-              <p>Aufgrund der Corona-Pandemie und der damit verbundenen Schutzmaßnahmen-Verordnung können wir keine Gruppen-Kurse garantieren.
-                Situationsabhängig behält sich die Skischule das Recht vor, lediglich Privat-Unterricht anzubieten. Der Unterricht wird unter allen erforderlichen Hygiene-Maßnahmen stattfinden.
-                Bitte informieren Sie sich vor Kursbeginn zu den aktuell gültigen Bestimmungen.
+              <a href="https://www.google.com/maps/place/Tiroler+Skischule+Jochberg+Wagst%C3%A4tt/@47.3768285,12.4163072,4184m/data=!3m1!1e3!4m5!3m4!1s0x4777ad109712de0b:0xd56101cf40a39452!8m2!3d47.3787102!4d12.4194771!5m1!1e4">
+                <div class="container map mb-5" style="background-image: url(./mapplaceholder.png); height: 40vh; background-size: cover; background-position: center;">
+                </div>
+              </a>
+              <div class="container disclaimer">
+                <h3>Corona</h3>
+                <p>Aufgrund der Corona-Pandemie und der damit verbundenen Schutzmaßnahmen-Verordnung können wir keine Gruppen-Kurse garantieren.
+                  Situationsabhängig behält sich die Skischule das Recht vor, lediglich Privat-Unterricht anzubieten. Der Unterricht wird unter allen erforderlichen Hygiene-Maßnahmen stattfinden.
+                  Bitte informieren Sie sich vor Kursbeginn zu den aktuell gültigen Bestimmungen.
                 </p>
-            </div>
-          </div>
-          <div class="container">
-            <div class="card">
-              <h3>Wichtige Infos</h3>
-              <p>Skipässe, Ausrüstung und Verpflegung sind in den angegebenen Kurspreisen nicht inbegriffen.</p>
-              <p>Für Unfälle und Schäden, die sich vor, während oder nach dem Unterricht ereignen, lehnt die Skischule jegliche Haftung ab. Eine Unfall- und Haftpflichtversicherung für unsere Kunden wird empfohlen, ist aber für die Teilnahme nicht erforderlich.</p>
-              <p>Kursausfälle wegen schlechter Witterung oder Liftausfälle (höhere Gewalt) werden nicht ersetzt.</p>
-              <p>Stornierungen müssen spätestens 24 Stunden vor Beginn des Kurses bekannt gegeben werden, ansonsten wird der Kurs in Rechnung gestellt.</p>
-              <p>Die Kursgebühren sind vor Kursbeginn zu begleichen.</p>
-              <p>Alle Preise sind gültig für das Skigebiet Kitzbühel, Jochberg und Pass Thurn (pro Person in Euro inkl. 20% MwSt.).</p>
-              <p>Online-Buchungen sind erst nach Bestätigung durch die Skischule verbindlich.</p>
-              <p>Der Inhalt der Website ist urheberrechtlich geschützt. Die Übernahme von Inhalten und Bildmaterial ist nur mit Genehmigung der Tiroler Skischule Jochberg Wagstätt gestattet.</p>
-              <p>Die auf dieser Website enthaltenen Informationen wurden nach bestem Wissen und mit Sorgfalt erstellt. Inhaltliche und sachliche Fehler können jedoch nicht ausgeschlossen werden. Die Tiroler Skischule Jochberg Wagstätt übernimmt keine Gewähr oder Haftung für die Aktualität, Richtigkeit und Vollständigkeit der enthaltenen Informationen.</p>
-              <p>Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.</p>
-              <p>Alle Angaben sind ohne Gewähr.</p>
-              <p>Die Preise verstehen sich pro Person in Euro inklusive 20% MwST. - Preisänderungen und Irrtümer sind vorbehalten.</p>
-            </div>
-          </div>
-          
+              </div>
+              <div class="card blind">hi</div>
+              <div class="container">
+                <h3>Wichtige Infos</h3>
+                <p>Skipässe, Ausrüstung und Verpflegung sind in den angegebenen Kurspreisen nicht inbegriffen.</p>
+                <p>Für Unfälle und Schäden, die sich vor, während oder nach dem Unterricht ereignen, lehnt die Skischule jegliche Haftung ab. Eine Unfall- und Haftpflichtversicherung für unsere Kunden wird empfohlen, ist aber für die Teilnahme nicht erforderlich.</p>
+                <p>Kursausfälle wegen schlechter Witterung oder Liftausfälle (höhere Gewalt) werden nicht ersetzt.</p>
+                <p>Stornierungen müssen spätestens 24 Stunden vor Beginn des Kurses bekannt gegeben werden, ansonsten wird der Kurs in Rechnung gestellt.</p>
+                <p>Die Kursgebühren sind vor Kursbeginn zu begleichen.</p>
+                <p>Alle Preise sind gültig für das Skigebiet Kitzbühel, Jochberg und Pass Thurn (pro Person in Euro inkl. 20% MwSt.).</p>
+                <p>Online-Buchungen sind erst nach Bestätigung durch die Skischule verbindlich.</p>
+                <p>Der Inhalt der Website ist urheberrechtlich geschützt. Die Übernahme von Inhalten und Bildmaterial ist nur mit Genehmigung der Tiroler Skischule Jochberg Wagstätt gestattet.</p>
+                <p>Die auf dieser Website enthaltenen Informationen wurden nach bestem Wissen und mit Sorgfalt erstellt. Inhaltliche und sachliche Fehler können jedoch nicht ausgeschlossen werden. Die Tiroler Skischule Jochberg Wagstätt übernimmt keine Gewähr oder Haftung für die Aktualität, Richtigkeit und Vollständigkeit der enthaltenen Informationen.</p>
+                <p>Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.</p>
+                <p>Alle Angaben sind ohne Gewähr.</p>
+                <p>Die Preise verstehen sich pro Person in Euro inklusive 20% MwST. - Preisänderungen und Irrtümer sind vorbehalten.</p>
+              </div>
 
 
-    <div class="container" style="bottom: 0;">
-      <div class="footer">
-        <!-- option to directly open email? -->
-            <a href="mailto:info@skischule-jochberg-wagstaett.at"><i class="far fa-envelope"></i></a>
+              <div class="card blind">hi</div>
+
+          </div>
+            <div class="footer">
+              <!-- option to directly open email? -->
+              <a href="mailto:info@skischule-jochberg-wagstaett.at"><i class="far fa-envelope"></i></a>
             <a href="https://www.youtube.com/user/SkischuleWagstaett"><i class="fab fa-youtube"></i></a>
             <a href="https://www.facebook.com/TirolerSkischuleJochbergWagstaett"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/skischule_wagstaett_tsjw/"><i class="fab fa-instagram"></i></a>
-        </div>        
-    </div>
+        </div>
   </body>
 </html>
