--- a/news.html
+++ b/news.html
@@ -15,19 +15,9 @@
   </head>
   <body>
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-      <a href="#" class="navbar-brand">
-        <img src="https://www.skilehrerjobs.at/img137/school-header-51.jpg" alt="">
+      <a href="index.html" class="navbar-brand">
+        <img src="Logo-Skischule.png" alt="">
       </a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a href="#" class="nav-link">DE</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">EN</a>
-          </li>
-        </ul>
-      </div>
     </div>
     <div class="nav-bar">
       <a href="./index.html" class="nav-elements">Home</a>
@@ -59,14 +49,12 @@
             </div>
         </div>
 
-    <div class="container" style="bottom: 0;">
       <div class="footer">
         <!-- option to directly open email? -->
             <a href="mailto:info@skischule-jochberg-wagstaett.at"><i class="far fa-envelope"></i></a>
             <a href="https://www.youtube.com/user/SkischuleWagstaett"><i class="fab fa-youtube"></i></a>
             <a href="https://www.facebook.com/TirolerSkischuleJochbergWagstaett"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/skischule_wagstaett_tsjw/"><i class="fab fa-instagram"></i></a>
-        </div>        
-    </div>
+        </div>
   </body>
 </html>
