--- a/uu.html
+++ b/uu.html
@@ -9,25 +9,15 @@
       <!-- some tags -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
-      <link rel="stylesheet" href="kontakt.css">
+      <link rel="stylesheet" href="uu.css">
       <link rel="stylesheet" href="header.css">
       <link rel="stylesheet" href="footer.css">
   </head>
   <body>
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-      <a href="#" class="navbar-brand">
-        <img src="https://www.skilehrerjobs.at/img137/school-header-51.jpg" alt="">
+      <a href="index.html" class="navbar-brand">
+        <img src="Logo-Skischule.png" alt="">
       </a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a href="#" class="nav-link">DE</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">EN</a>
-          </li>
-        </ul>
-      </div>
     </div>
     <div class="nav-bar">
       <a href="./index.html" class="nav-elements">Home</a>
@@ -38,15 +28,31 @@
       <a href="./news.html" class="nav-elements">News</a>
       <a href="./uu.html" class="nav-elements active-breadcrum">Über Uns</a>
     </div>
-    <hr>
-    <hr>
     <!-- <div xclass="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.kitzbuehel.com/app/uploads/2020/02/0ec4cc2c-9159-482b-ac6f-1b629015f88a-930x620.jpg);"> -->
+      <div class="containerq">
+        <div class="card blind">hi</div>
         <div class="container">
-            <div class="card">
                 <h3>Geschichte</h3>
-                <p>Arlberg 2011; Wir über uns; Kinobesuch; Nachtrodeln; Pärchen Gerhard/Roswitha – Andreas/Elena</p>
+                <p>
+                  Im Jahr 2002 haben sich die beiden Freunde Gerhard Krahbichler und Elena Dankl dazu entschlossen, gemeinsam in Jochberg
+                  die Tiroler Skischule Jochberg Wagstätt zu gründen. Gerhard Krahbichler war seines Zeichens ein Herausragender
+                  Rennläufer auf nationaler und internationaler Ebene. Auch als ‚Werbeikone‘ ist er als Hauptrolle in der <a href="https://www.youtube.com/watch?v=MUn3MVDuCHs">legendären Café
+                  de Colombia Werbung</a> für den Ski World Cup zu sehen.
+                  Elena Dankl kommt ursprünglich aus dem Tennis Sport und hat unter der Leitung von Davis Cup Coach & Sieger Niki Pilic
+                  die ‚Kids Tennis Base‘ in München-Oberschleißheim geleitet. Ihre Liebe zum Skisport hatte Elena Dankl schon als Kind
+                  entwickelt.
+                </p>
+            </div>
+            <div class="container">
                 <h3>Unser Ziel</h3>
-                <p>Entwicklung mit Spaß. Ihre ganz individuelle Betreuung und Ihr Wohlbefinden haben bei uns oberste Priorität. Anhand moderner Ausrüstung, aktueller Schulungsmethoden und unserem jungen und dynamischen Team erlernen Sie mit Hilfe einfacher, bekannter und alltagsmotorischer Bewegungen Ihre Wunschdisziplin. Egal ob Anfänger, Fortgeschritten oder Könner - Wir bringen Sie auf ein neues Niveau.</p>
+                <p>
+                  Entwicklung mit Spaß. Ihre ganz individuelle Betreuung und Ihr Wohlbefinden haben bei uns oberste Priorität. Anhand
+                  moderner Ausrüstung, aktueller Schulungsmethoden und unserem jungen und dynamischen Team erlernen Sie mit Hilfe
+                  einfacher, bekannter und alltagsmotorischer Bewegungen Ihre Wunschdisziplin. Egal ob Anfänger, Fortgeschritten oder
+                  Könner - Wir bringen Sie auf ein neues Niveau.
+                </p>
+            </div>
+            <div class="container">
                 <div class="text-center">
                     <h5>Unsere Philosophie: „Genial einfach – einfach genial!“</h5>
                 </div>
@@ -63,18 +69,15 @@
                     <li>...</li>
                     <li>...</li>
                 </ul>
-
             </div>
         </div>
 
-    <div class="container" style="bottom: 0;">
       <div class="footer">
         <!-- option to directly open email? -->
             <a href="mailto:info@skischule-jochberg-wagstaett.at"><i class="far fa-envelope"></i></a>
             <a href="https://www.youtube.com/user/SkischuleWagstaett"><i class="fab fa-youtube"></i></a>
             <a href="https://www.facebook.com/TirolerSkischuleJochbergWagstaett"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/skischule_wagstaett_tsjw/"><i class="fab fa-instagram"></i></a>
-        </div>        
-    </div>
+        </div>
   </body>
 </html>
