--- a/events&more.html
+++ b/events&more.html
@@ -9,25 +9,20 @@
       <!-- some tags -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
-      <link rel="stylesheet" href="kontakt.css">
+      <link rel="stylesheet" href="events.css">
+      <link rel="stylesheet" href="home.css">
       <link rel="stylesheet" href="header.css">
       <link rel="stylesheet" href="footer.css">
+      <!-- work for carusell -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-      <a href="#" class="navbar-brand">
-        <img src="https://www.skilehrerjobs.at/img137/school-header-51.jpg" alt="">
+      <a href="index.html" class="navbar-brand">
+        <img src="Logo-Skischule.png" alt="">
       </a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a href="#" class="nav-link">DE</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">EN</a>
-          </li>
-        </ul>
-      </div>
     </div>
     <div class="nav-bar">
       <a href="./index.html" class="nav-elements">Home</a>
@@ -37,38 +32,89 @@
       <a href="./kontakt.html" class="nav-elements">Anmeldung & Information</a>
       <a href="./news.html" class="nav-elements">News</a>
       <a href="./uu.html" class="nav-elements">Über Uns</a>
+    </div>
+    <!-- carousel banner -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 100%">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+      </ol>
 
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
 
-    </div> 
-    <hr>
-    <hr>
-    <p>In Zusammenarbeit mit der xDIM's GmbH organisieren wir Ihre ganz besonderen Incentives und unterstützen Sie bei der Planung und dem Programm:</p>
-    <ul>
-        <li><p>Schneeschuhwanderung</p></li>
-        <li><p>Nacht-Wanderung: Sie wollen Kitzbühel von einer anderen Seite sehen? Warum nicht bei Nacht? Wir zeigen Ihnen die Kitzbüheler Alpen aus einer anderen Perspektive. Die Nacht wird von einer Fackelwanderung umrahmt.</p></li>
-        <li><p>Rodeln bei Nacht: Sie wollen einen Geschwindigkeitsrausch bei Nacht? Wir führen Sie durch den nächtlichen Rodelparcours.</p></li>
-        <li><p>Kindergeburtstag auf Skiern: Machen Sie Ihren Kindergeburtstag zu etwas Besonderem! Lassen Sie uns eine besondere und unvergessliche Geburtstagsparty am Himmel organisieren mit einem Rennen, speziellem Buffet und einer Feier mit tollen Preisen! Dieser Tag wird in Erinnerung bleiben.</p></li>
-        <li><p>Ein Firmentag im Schnee: Überraschen Sie Ihre Mitarbeiter mit einer neuen Perspektive. Wir organisieren mit Ihren Mitarbeitern einen Tag im Schnee und schenken Ihnen einen außergewöhnlichen Tag, um Kraft zu tanken und eine stärkere Bindung in Ihrer Firma aufzubauen.</p></li>
-        <li><p>Firmen- und Geburtstagsrace: Machen Sie Ihren Geburtstag oder das Jubiläum Ihrer Firma zu etwas Besonderem. Wir runden den Tag mit einem besonderen Rennen und einem Programm ab, das Sie und alle Teilnehmer überraschen wird.</p></li>
-        <li><p>Boccia auf Schnee: "Nur Skifahren" ist Ihnen nicht genug? Sie wollen neben dem Rennen auf der Piste noch einen kleinen Wettkampf? Dann sollten Sie Boccia on snow ausprobieren und wir kümmern uns natürlich um das Programm drum herum!</p></li>
-        <li><p>Wintergolf: Golfen ist längst nicht mehr nur ein Sommersport. Bei uns können Sie Ihr Hobby auch im Winter genießen. Wenn Sie nach einem anstrengenden Vormittag auf der Piste eine entspannte Golfrunde bevorzugen, lassen Sie uns die Weichen für Sie stellen.</p></li>
-        <li><p>Pistenbrunch: Starten Sie auf besondere Weise in den Skitag - mit einem prickelnden Sektfrühstück inmitten der atemberaubenden Bergwelt der Kitzbüheler Alpen.</p></li>
-        <li><p>Hüttenfieber: Sie möchten einen Skitag in den Kitzbüheler Alpen für Ihre Familie, Freunde und Kollegen zu einem besonderen Ereignis machen?
-            Lassen Sie sich von uns durch den Tag führen und suchen Sie sich die besten und urigsten Hütten aus, damit Sie jeden einzelnen Moment genießen können.</p></li>
-        <li><p>Wintermärchen mit Feuerwerk: Unser ganz persönlicher Tipp! Für einen besonderen Anlass braucht man ein besonderes Event. Die Kitzbüheler Alpen bieten alles, was es braucht, um Ihnen eine besondere Wintermärchen-Nacht zu bescheren. Ein Abend mit gutem Essen und Trinken auf besonderen Hütten, Schneeschuhwanderung und Fackelwanderung oder eine Kutschenfahrt. Als Highlight schenken wir Ihnen Ihr persönliches Feuerwerk. </p></li>
-    </ul>
-    <p>Haben wir Ihr Interesse geweckt?</p>
-    <p>Sie möchten weitere Informationen?</p>
-    <p>Wir erstellen Ihnen gerne Ihr persönliches und maßgeschneidertes Angebot.</p>
-    <hr>
-    <div class="container" style="bottom: 0;">
+        <div class="item active">
+          <div class="banner"
+            style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(./placeholder5.png);">
+
+          </div>
+        </div>
+
+        <div class="item">
+          <div class="banner"
+            style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(Carving_800x600.png);">
+          </div>
+        </div>
+
+        <div class="item">
+          <div class="banner"
+            style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(Skilehrer_800x300.png);">
+          </div>
+        </div>
+
+        <div class="item">
+          <div class="banner"
+            style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(Follow-Me_800x300.png);">
+          </div>
+        </div>
+
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+    <div class="containerq">
+      <div class="container">
+        <h3>In Zusammenarbeit mit der xDIM's GmbH organisieren wir Ihre ganz besonderen Incentives und unterstützen Sie bei der Planung und dem Programm:</hh4>
+        <ul class="mt-5">
+            <li><p><strong>Schneeschuhwanderung</strong></p></li>
+            <li><p><strong>Nacht-Wanderung</strong>: Sie wollen Kitzbühel von einer anderen Seite sehen? Warum nicht bei Nacht? Wir zeigen Ihnen die Kitzbüheler Alpen aus einer anderen Perspektive. Die Nacht wird von einer Fackelwanderung umrahmt.</p></li>
+            <li><p><strong>Rodeln bei Nacht</strong>: Sie wollen einen Geschwindigkeitsrausch bei Nacht? Wir führen Sie durch den nächtlichen Rodelparcours.</p></li>
+            <li><p><strong>Kindergeburtstag auf Skiern</strong>: Machen Sie Ihren Kindergeburtstag zu etwas Besonderem! Lassen Sie uns eine besondere und unvergessliche Geburtstagsparty am Himmel organisieren mit einem Rennen, speziellem Buffet und einer Feier mit tollen Preisen! Dieser Tag wird in Erinnerung bleiben.</p></li>
+            <li><p><strong>Ein Firmentag im Schnee</strong>: Überraschen Sie Ihre Mitarbeiter mit einer neuen Perspektive. Wir organisieren mit Ihren Mitarbeitern einen Tag im Schnee und schenken Ihnen einen außergewöhnlichen Tag, um Kraft zu tanken und eine stärkere Bindung in Ihrer Firma aufzubauen.</p></li>
+            <li><p><strong>Firmen- und Geburtstagsrace</strong>: Machen Sie Ihren Geburtstag oder das Jubiläum Ihrer Firma zu etwas Besonderem. Wir runden den Tag mit einem besonderen Rennen und einem Programm ab, das Sie und alle Teilnehmer überraschen wird.</p></li>
+            <li><p><strong>Boccia auf Schnee</strong>: "Nur Skifahren" ist Ihnen nicht genug? Sie wollen neben dem Rennen auf der Piste noch einen kleinen Wettkampf? Dann sollten Sie Boccia on snow ausprobieren und wir kümmern uns natürlich um das Programm drum herum!</p></li>
+            <li><p><strong>Wintergolf</strong>: Golfen ist längst nicht mehr nur ein Sommersport. Bei uns können Sie Ihr Hobby auch im Winter genießen. Wenn Sie nach einem anstrengenden Vormittag auf der Piste eine entspannte Golfrunde bevorzugen, lassen Sie uns die Weichen für Sie stellen.</p></li>
+            <li><p><strong>Pistenbrunch</strong>: Starten Sie auf besondere Weise in den Skitag - mit einem prickelnden Sektfrühstück inmitten der atemberaubenden Bergwelt der Kitzbüheler Alpen.</p></li>
+            <li><p><strong>Hüttenfieber</strong>: Sie möchten einen Skitag in den Kitzbüheler Alpen für Ihre Familie, Freunde und Kollegen zu einem besonderen Ereignis machen?
+                Lassen Sie sich von uns durch den Tag führen und suchen Sie sich die besten und urigsten Hütten aus, damit Sie jeden einzelnen Moment genießen können.</p></li>
+            <li><p><strong>Wintermärchen mit Feuerwerk</strong>: Unser ganz persönlicher Tipp! Für einen besonderen Anlass braucht man ein besonderes Event. Die Kitzbüheler Alpen bieten alles, was es braucht, um Ihnen eine besondere Wintermärchen-Nacht zu bescheren. Ein Abend mit gutem Essen und Trinken auf besonderen Hütten, Schneeschuhwanderung und Fackelwanderung oder eine Kutschenfahrt. Als Highlight schenken wir Ihnen Ihr persönliches Feuerwerk. </p></li>
+        </ul>
+        <div class="cta text-center">
+          <h4>Haben wir Ihr Interesse geweckt?</h4>
+          <h4>Sie möchten weitere Informationen?</h4>
+          <h4>Wir erstellen Ihnen gerne Ihr persönliches und maßgeschneidertes Angebot.</h4>
+        </div>
+
+      </div>
+    </div>
       <div class="footer">
         <!-- option to directly open email? -->
             <a href="mailto:info@skischule-jochberg-wagstaett.at"><i class="far fa-envelope"></i></a>
             <a href="https://www.youtube.com/user/SkischuleWagstaett"><i class="fab fa-youtube"></i></a>
             <a href="https://www.facebook.com/TirolerSkischuleJochbergWagstaett"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/skischule_wagstaett_tsjw/"><i class="fab fa-instagram"></i></a>
-        </div>        
-    </div>
+        </div>
   </body>
 </html>
