--- a/kurse.html
+++ b/kurse.html
@@ -8,7 +8,7 @@
       <link rel="shortcut icon" type="image/jpg" href="./favicon.ico"/>
 
       <!-- some tags -->
-      
+
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
       <link rel="stylesheet" href="kurse.css">
@@ -17,19 +17,9 @@
     </head>
     <body>
         <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-        <a href="#" class="navbar-brand">
-            <img src="https://www.skilehrerjobs.at/img137/school-header-51.jpg" alt="">
-        </a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a href="#" class="nav-link">DE</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">EN</a>
-            </li>
-            </ul>
-        </div>
+          <a href="index.html" class="navbar-brand">
+              <img src="Logo-Skischule.png" alt="">
+          </a>
         </div>
         <div class="nav-bar">
             <a href="./index.html" class="nav-elements">Home</a>
@@ -42,15 +32,16 @@
         </div>
 
         <!-- card one -->
-        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1504480899134-8d1752cc1162?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2169&q=80);
+        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(Carving_800x600_bw.png);
         ">
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Privatunterricht Ski & Snowboard</h2>
                     <h6>Kinder & Erwachsene</h6>
                     <h6>Teilnehmer: 1-2 Personen</h6>
+                    <h6>Dauer: 2.5 std(halber Tag)/min 5 std(ganzer Tag)</h6>
                     <hr>
-                </div>                
+                </div>
                 <div class="content col-12 col-md-6">
                     <p>
                         Betreuung auf höchstem Niveau, die auf Ihre individuellen Wünsche zugeschnitten ist – der Privatunterricht ist die exklusivste und effektivste Art, den Winterurlaub in den Kitzbüheler Alpen zu genießen. Mit unserem individuellen Service garantieren wir Ihnen nicht nur einen großen Erfolg, sondern auch Flexibilität in Ihrem Tagesablauf.
@@ -58,19 +49,20 @@
                     <p>
                         Um sicherzustellen, dass wir Ihren Wunsch erfüllen können, buchen Sie Ihren Privatlehrer – besonders in der Ferienzeit – bitte frühzeitig.
                         Wir empfehlen generell das Tragen eines Helmes und eines Rückenprotektors. Bei Kindern besteht Helmpflicht.
-                    </p>                
+                    </p>
                 </div>
             </div>
         </div>
         <!-- card two -->
-        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1578311724531-36fd78d4535c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1188&q=80);">
+        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(Oldschool-2_800x300_bw.png);">
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Gruppenkurse Ski & Snowboard</h2>
                     <h6>Kinder & Erwachsene</h6>
                     <h6>Teilnehmer: 3-5 bzw. ab 6 Personen</h6>
+                    <h6>Dauer: 10:00-15:30 incl. Mittagsspause</h6>
                     <hr>
-                </div>                
+                </div>
                 <div class="content col-12 col-md-6">
                     <p>
                         Mit unseren homogenen Gruppen bieten wir Ihnen eine qualitativ hochwertige Betreuung und einen großen Erfolg für jedes Alter und jedes Niveau.
@@ -81,7 +73,7 @@
                     <p>
                         In den Kinderkursen bieten wir Mittagsbetreuung und -essen mit freier Hüttenwahl an (zzgl. ab 12,00 Euro/Tag).
                         Wir empfehlen generell das Tragen eines Helmes und eines Rückenprotektors. Bei Kindern besteht Helmpflicht.
-                    </p>                
+                    </p>
                 </div>
             </div>
         </div>
@@ -90,9 +82,10 @@
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Special Kids Offer</h2>
-                    <h6>Teilnehmer: ?</h6>
+                    <h6>Teilnehmer: 3-5</h6>
+                    <h6>Dauer: 10:00-12:30</h6>
                     <hr>
-                </div>                
+                </div>
                 <div class="content col-12 col-md-6">
                     <p>
                         Gruppenkurs für Kinder bis 4 Jahre.
@@ -101,24 +94,25 @@
                     </p>
                     <p>
                         Bei den Kleinen besteht Helmpflicht.
-                    </p>                
+                    </p>
                 </div>
             </div>
         </div>
         <!-- card four -->
-        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1579156618335-f6245e05236a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1160&q=80)">
+        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(Race-4_800x300_bw.png)">
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Race</h2>
-                    <h6>Teilnehmer: ?</h6>
+                    <h6>Teilnehmer: 3</h6>
+                    <h6>Dauer: nach Absprache</h6>
                     <hr>
-                </div>                
+                </div>
                 <div class="content col-12 col-md-6">
                     <p>
                         Für die jungen Profis von Morgen und alle Skifahrer, die Spaß an einem Stangentraining haben.
                         Ein richtiges Rennen fahren? Für den nächsten Wettkampf trainieren? Oder einfach die Technik verbessern?
                         Unsere FIS- und rennerfahrenen Skilehrer erarbeiten ein individuelles Programm, das auf den neusten technisch-methodischen Erkenntnissen aufbaut. Auf Anfrage unterstützen wir die Entwicklung der Technik mit einer Videoanalyse.
-                        Der Einstieg in den Kurs ist jederzeit möglich. Es besteht Helmpflicht, darüber hinaus empfehlen wir das Tragen eines Rückenprotektors.    
+                        Der Einstieg in den Kurs ist jederzeit möglich. Es besteht Helmpflicht, darüber hinaus empfehlen wir das Tragen eines Rückenprotektors.
                     </p>
                     <p>
                         Voraussetzung: Gutes bis sehr gutes Skifahr-Niveau!
@@ -128,7 +122,7 @@
                         <li>Renntechnik im freien Skilauf</li>
                         <li>Stangentraining</li>
                         <li>Ausrüstungs- und Materialtipps</li>
-                        <li>Tipps, Anleitungen und Empfehlungen zur Vorbereitung der Ski</li>            
+                        <li>Tipps, Anleitungen und Empfehlungen zur Vorbereitung der Ski</li>
                     </ul>
                 </div>
             </div>
@@ -139,8 +133,9 @@
                 <div class="title col-12 col-md-6">
                     <h2>Safety First</h2>
                     <h6>Teilnehmer: Min. 4 Personen</h6>
+                    <h6>Dauer: nach Absprache</h6>
                     <hr>
-                </div>                
+                </div>
                 <div class="content col-12 col-md-6">
                     <p>
                         Erlernen Sie die Grundkenntnisse der Lawinenkunde, Ausrüstungscheck und Piepsersuche mit
@@ -149,26 +144,28 @@
                         <li>Snowcard</li>
                         <li>Sonde</li>
                         <li>Piepser</li>
-                        <li>u.v.a.</li>            
-                    </ul>               
+                        <li>u.v.a.</li>
+                    </ul>
                 </div>
             </div>
         </div>
         <!-- card six -->
-        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1578311724531-36fd78d4535c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1188&q=80);">
+        <div class="coursecard" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url(Winterfoto_800x600_bw.png);">
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Morning Run</h2>
                     <h6>Teilnehmer: 1-2 Personen</h6>
+                    <h6>Dauer: 8:30-10:00</h6>
+
                     <hr>
-                </div>                
+                </div>
                 <div class="content col-12 col-md-6">
                     <p>
                         Der Privatunterricht für Frühaufsteher. Genießen Sie die perfekt präparierten Pisten und seien Sie mit Ihrem Lehrer einer der ersten am Berg.
-                    </p> 
+                    </p>
                     <p>
-                        Der Morning Run empfiehlt sich für alle, die sich dem Feinschliff ihrer Technik widmen möchten.                        
-                    </p>         
+                        Der Morning Run empfiehlt sich für alle, die sich dem Feinschliff ihrer Technik widmen möchten.
+                    </p>
                 </div>
             </div>
         </div>
@@ -177,16 +174,17 @@
             <div class="row">
                 <div class="title col-12 col-md-6">
                     <h2>Specials</h2>
+                    <h6>nach Absprache</h6>
                     <hr>
-                </div>                
+                </div>
                 <div class="content col-12 col-md-6">
                     <h4>Skitouren</h4>
                     <p>
-                        Einzigartig und unvergesslich. Unsere orts- und gebietskundigen Ski- und Bergführer zeigen Ihnen eine andere Welt der der Kitzbüheler Alpen. Aufstieg, Gipfelstieg und zum Abschluss Pulverschneeabfahrt in eine faszinierende Bergwelt. Wir zeigen Ihnen, wie Sie sicher und mit Freude Ihre Spuren in den Schnee ziehen.                    
-                    </p> 
+                        Einzigartig und unvergesslich. Unsere orts- und gebietskundigen Ski- und Bergführer zeigen Ihnen eine andere Welt der der Kitzbüheler Alpen. Aufstieg, Gipfelstieg und zum Abschluss Pulverschneeabfahrt in eine faszinierende Bergwelt. Wir zeigen Ihnen, wie Sie sicher und mit Freude Ihre Spuren in den Schnee ziehen.
+                    </p>
                     <p>
                         Voraussetzung: Gutes bis sehr gutes Skifahr-Niveau!
-                    </p> 
+                    </p>
                     <hr>
                     <h4>Langlauf</h4>
                     <p>
@@ -196,18 +194,18 @@
                     <hr>
                     <h4>Telemark</h4>
                     <p>
-                        Zurück zum Ursprung des Skifahrens „Free heel skiing“ – die neue, alte Technik. Wer eine Herausforderung auf Skiern sucht, kommt am Telemark nicht vorbei. Durch den Aufbau von Schuhwerk und Bindung sind unglaubliche Bewegungsfreiheiten gegeben, die höchsten Skispaß vermitteln und neue Impulse geben.                    
-                    </p>        
+                        Zurück zum Ursprung des Skifahrens „Free heel skiing“ – die neue, alte Technik. Wer eine Herausforderung auf Skiern sucht, kommt am Telemark nicht vorbei. Durch den Aufbau von Schuhwerk und Bindung sind unglaubliche Bewegungsfreiheiten gegeben, die höchsten Skispaß vermitteln und neue Impulse geben.
+                    </p>
                 </div>
             </div>
         </div>
-                                    
+
     <div class="footer">
         <!-- option to directly open email? -->
         <a href="mailto:info@skischule-jochberg-wagstaett.at"><i class="far fa-envelope"></i></a>
         <a href="https://www.youtube.com/user/SkischuleWagstaett"><i class="fab fa-youtube"></i></a>
         <a href="https://www.facebook.com/TirolerSkischuleJochbergWagstaett"><i class="fab fa-facebook"></i></a>
         <a href="https://www.instagram.com/skischule_wagstaett_tsjw/"><i class="fab fa-instagram"></i></a>
-    </div>        
+    </div>
   </body>
 </html>
